# Prospectus-Agent

./: .env.example  .gitignore  LICENSE  README.md  Reaction-Studio-Nascent-Materials.pptx  agent_profile.py  config.py  contacts.py  daily_run.py  db.py  discovery.py  drafting.py  llm.py  on_profile.py  on_profile_cache.json  open-numerics.db.bak-arrakis-20260626-153612  open-numerics_brief_cache.json  outbox.py  profile.example.yaml  pyproject.toml  requirements.txt  research.py  schemas.py  sectors.py  status.py
docs/: auto-send-design.md
prompts/: common.py  discovery.py  followup.py  on_profile.py  research.py
src/prospectus_agent/: __init__.py  __main__.py  agent_profile.py  cli.py  config.py  contacts.py  daily_run.py  db.py  deliver_run.py  discovery.py  drafting.py  followup_run.py  followups.py  gmail_auth.py  llm.py  mark_sent.py  on_profile.py  outbox.py  paths.py  redraft.py  refine.py  research.py  run_all.py  runner.py  schemas.py  sectors.py  send.py  status.py  verify.py
src/prospectus_agent/prompts/: __init__.py  discovery.py  followup.py  on_profile.py  redraft.py  research.py
tests/: conftest.py  test_cli.py  test_contacts.py  test_daily_run.py  test_db.py  test_deliver.py  test_delivery_db.py  test_discovery.py  test_followups.py  test_humanize.py  test_llm.py  test_mark_sent.py  test_on_profile.py  test_outbox.py  test_prompts.py  test_redraft.py  test_research.py  test_run_all.py  test_schemas.py  test_sectors.py  test_send.py  test_verify.py
