[project]
name = "prospectus-agent"
version = "0.5.0"
description = "Daily AI agent that finds prospective clients and drafts tailored outreach emails."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hannes Vandecasteele", email="hannesv@opennumerics.com" }]
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
prospectus-agent = "prospectus_agent.cli:main"
prospectus-status = "prospectus_agent.status:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# src/ layout: the importable package is `prospectus_agent`. Install it (and the
# `prospectus-agent` command) into a venv with an editable install:
#   python -m venv .venv
#   .venv/bin/pip install -e ".[dev]"
# The [project] dependencies above are the source of truth that requirements*.txt mirror.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
