[project]
name = "prospectus-agent"
# Single source of truth: prospectus_agent.__version__ (see [tool.setuptools.dynamic]).
dynamic = ["version"]
description = "Daily AI agent that finds prospective clients and drafts tailored outreach emails."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hannes Vandecasteele", email="hannesv@opennumerics.com" }]
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Gmail auto-send (`--deliver --live`). Optional: dry-run and the rest of the tool work
# without these. Install with `pip install -e '.[gmail]'` when wiring live sending.
gmail = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.scripts]
prospectus-agent = "prospectus_agent.cli:main"
prospectus-status = "prospectus_agent.status:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# src/ layout: the importable package is `prospectus_agent`. Install it (and the
# `prospectus-agent` command) into a venv with an editable install:
#   python -m venv .venv
#   .venv/bin/pip install -e ".[dev]"
# The [project] dependencies above are the source of truth that requirements*.txt mirror.
[tool.setuptools.packages.find]
where = ["src"]

# Version is read from prospectus_agent/__init__.py's __version__ at build time, so it
# lives in exactly one place. Bump it there.
[tool.setuptools.dynamic]
version = { attr = "prospectus_agent.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
